# infinite-craft-bot

./: .gitignore  README.md  compute_element_paths.py  elements.json  lock.py  main.py  pyproject.toml  recipes.json  test.py
bats/: infinite_craft.bat
data/: _ensure_conversion_worked.py  _ensure_duplicate_removal_worked_correctly.py  _json_to_csv.py  _remove_duplicate_recipes.py  elements.json  recipes.json
data/csv/elements/: 00000.csv  00001.csv  00002.csv  00003.csv
data/csv/exhaustive/: next_craft_combination.txt
data/csv/recipes/: 00000.csv  00001.csv  00002.csv  00003.csv  00004.csv  00005.csv  00006.csv  00007.csv  00008.csv  00009.csv  00010.csv  00011.csv  00012.csv  00013.csv  00014.csv  00015.csv  00016.csv  00017.csv  00018.csv  00019.csv  00020.csv  00021.csv  00022.csv  00023.csv  00024.csv  00025.csv  00026.csv  00027.csv  00028.csv  00029.csv  00030.csv  00031.csv  00032.csv  00033.csv  00034.csv  00035.csv  00036.csv  00037.csv  00038.csv  00039.csv  (+26 more)
data/csv/stats/: stats.txt
data/json/: _ensure_duplicate_removal_worked_correctly.py  _remove_duplicate_recipes.py
data/json/stats/: stats.txt
data/stats/: stats.txt
scripts/: infinite_craft.bat  query_recipes.bat  search_for_video_game.bat  update_and_query.bat  validate_generate_stats.bat
src/: compute_element_paths.py  main.py  query_full_recipe.py
src/infinite_craft_bot/: __main__.py  api.py  cli.py  globals.py  helpers.py  logging_helpers.py  persistence.py  query_full_recipe.py  text_similarity.py  ui.py
src/infinite_craft_bot/crawler/: __init__.py  common.py  exhaustive_by_depth.py  probibalistic.py  sample_elements.py  targeted.py
src/infinite_craft_bot/element_paths/: compute_paths.py  make_plots.py  path_stats.py
src/infinite_craft_bot/persistence/: common.py  csv_file.py  json_file.py
tests/: test_data_validity.py
