[tool.poetry]
name = "infinite-craft-bot"
version = "0.1.0"
description = ""
authors = ["Florian Bender <benderflorian70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
rich = "^13.7.0"
fasteners = "^0.19"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
